--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,12 @@
+*{
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
+  padding: 0;
+  background: #46529d;
+  color: #fff;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +17,69 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.text-center{
+  text-align: center;
+}
+
+.container{
+  width: 60%;
+  margin: 10px auto;
+}
+
+.listItems{
+  background: #fff;
+  color: #46529d;
+}
+
+.listItems p{
+  margin: 0;
+  text-align: center;
+  padding: 10px 0px;
+}
+
+.listItems span{
+  display: inline-block;
+  text-align: center;
+  padding: 10px 0px;
+  font-size: 20px;
+  border: 0.3px solid #ccc;
+}
+
+.listItems span.title{
+  background: #2ebaee;
+  color: #fff;
+}
+
+.listItems span.name,
+form input[type=text]{
+  width: 60%;
+}
+
+.listItems span.age,
+form input[type=number]{
+  width: 30%;
+}
+
+.listItems span.action,
+form input[type=submit]{
+  width: 10%;
+}
+
+.listItems span.icon{
+  color: #f00;
+  cursor: pointer;
+}
+
+form input{
+  padding: 10px;
+  background: #ebebeb;
+  border: 0.3px solid #ccc;
+}
+
+form input[type=submit]{
+  background: #2ebaee;
+  color: #fff;
+  cursor: pointer;
 }
